--- a/recipe.css
+++ b/recipe.css
@@ -1,13 +1,23 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+h1{
+  color: rgb(11, 1, 1);
+  font-size: 70px;
+}
 body {
   background-color: rgb(144, 40, 40);
+  background-image:url(recipe.jpg);
 }
 
 .main-box {
-  background-color: aqua;
+  /* background-color: rgb(27, 113, 113); */
   display: flex;
   width: 100%;
-  height: 120px;
-  border: 2px solid black;
+  height: 90px;
+  /* border: 2px solid black; */
   align-items: center;
   text-align: center;
   justify-content: space-between;
@@ -66,9 +76,12 @@ margin-left: 420px;
 
 .dish-info{
     margin-top: 18px;
+    font-weight: 400;
 }
 .ingre-info {
     display: inline;
+    font-weight: 400;
+  
 }
 
 
@@ -76,5 +89,6 @@ margin-left: 420px;
   display: inline;
 }
 .ingredients{
-    font-size: 17px;
+    font-size: 20px;
+    font-weight: 400;
 }
